--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Timothy Jonker</title>
+    <title>Timothy Jonker - Professional Full Stack Enginner</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
