Added google analytics to my site

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,20 @@
     <title>Timothy Jonker - Professional Full Stack Enginner</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-NMER1Y2YP6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-NMER1Y2YP6");
+    </script>
     <script
       src="https://kit.fontawesome.com/8ddd18f331.js"
       crossorigin="anonymous"
